    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

 */
 
 Short descrition
 + New Function
 * Updated Function
 - Removed Function

0.7
+ delete old entries
* Storing Data Bugfix
+ UserAction CheckFeeds
* TableColumn resizing bugfix
* stop unsynced reloading feed while looping
* write last event to database
* bugfix: exception when splashscreen not found
* bugfix: Feed equals
* bugfix: News equals
* some code improvements
+ DisplayCount Management
+ persist newsentity
* Changing the monitoring intervall is now recognized after the next monitoring step

0.6
* new popup at notification opens the entry in a browser window
* Added JNotification Lib
* notification is now available
* monitor handling reorganized (notification handling)
* monitor intervall bugfix #1
+ junit added to build and ant
+ intervall to monitor added
+ first simple monitor added - works after a reboot
* fixed vacation dates field size bug - new pattern: "dd.MM.yyyy"
+ time frame validation
+ input validation displaycount and displaytime
+ add Test Suite
+ start and endtime validation
+ feed validation before save
* resize the columns to a adequate size
* Dist fix to include all necessary files

0.5
* Bugfix db save
* remove empty rows automatically
* Change Table field style for booleans 
* delete feeds in config frame from db
* store feeds from config frame to db
* add and change feeds in config frame
* new column to the feed table: id
* Config frame add row and delete row
* Config frame add button
* shutdown bug if thread never was started
* Display saved Feeds in config frame
* Monitor select feeds
+ FeedDAO
* equals and hash of Feed and News
* link between Feed and News
+ Storing time settings
+ Apptitle and version from manifest
+ Storing properties
+ Language Selection