@@ -1,0 +1,6 @@
+package at.nullpointer.trayrss.configuration.timeframes;
+
+public interface TimeValidation {
+	public boolean isAllowed();
+
+}
